# data-modeling-with-postgres

./: .flake8  .gitignore  README.md  pyproject.toml
notebooks/: etl.ipynb  test.ipynb
sparkify_etl/: create_tables.py  etl.py  sql_queries.py
