[tool.poetry]
name = "sparkify-etl"
version = "0.0.1"
description = "ETL for sparkify analytics"
authors = ["Maximilian Engelhardt <maximilian.engelhardt@ing.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
psycopg2 = "*"
pandas = "*"
ipykernel = "*"
ipython-sql = "*"

[tool.poetry.dev-dependencies]
pylint = "^2.10.2"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
